Added website fixes

--- a/UI/src/app/app.component.html
+++ b/UI/src/app/app.component.html
@@ -70,7 +70,7 @@
                             Main Features
                         </h2>
                         <p class="text-lg leading-relaxed text-body-color sm:text-xl sm:leading-relaxed">
-                            Our unique system can
+                          
                         </p>
                     </div>
                 </div>
@@ -92,6 +92,8 @@
                         <h4 class="mb-3 text-xl font-bold text-dark">
                             Free and Open-Source
                         </h4>
+                        <br>
+                         <p class="mb-8 text-body-color lg:mb-11"><a href="https://github.com/alexihoule/S6-APP5" target="_blank">https://github.com/alexihoule/S6-APP5</a></p>
                     </div>
                 </div>
                 <div class="w-full px-4 md:w-1/2 lg:w-1/4">
@@ -108,17 +110,18 @@
                             </svg>
                         </div>
                         <h4 class="mb-3 text-xl font-bold text-dark">
-                            List of complete event 
+                            List all badges that communicated with our Particle Argon™  
                         </h4>
                         <p class="mb-8 text-body-color lg:mb-11">
                             <app-events></app-events>
+                            
                         </p>
-                        
                     </div>
                 </div>
                 <div class="w-full px-4 md:w-1/2 lg:w-1/4">
                     <div class="wow fadeInUp group mb-12 bg-white" data-wow-delay=".2s">
                         <app-led></app-led>
+                        <br>
                         <p class="mb-8 text-body-color lg:mb-11">
                             Using unique properiatry technology our system can communicate through the cloud securely using the power of Bitcoin™ and the Blockchain™
                         </p>
@@ -139,16 +142,14 @@
                             </svg>
                         </div>
                         <h4 class="mb-3 text-xl font-bold text-dark">
-                            Made by student, for the student
+                            Development
                         </h4>
+                        <br>
                         <p class="mb-8 text-body-color lg:mb-11">
-                         
+                            The Argon is a powerful Wi-Fi enabled development kit and is easily integrable with the help of the Particle Cloud™
+                     
                         </p>
                     </div>
-
-
-
-                   
                 </div>
             </div>
         </div>
@@ -168,8 +169,7 @@
                         <svg viewBox="0 0 3849.5 890" xmlns="http://www.w3.org/2000/svg"><g fill="#FFFFFF"><path d="m 1131.7948,453.07845 h -68.6851 v -134.9135 h 73.4366 c 83.2318,0 95.1042,33.94138 95.1042,64.71407 0,30.76959 -13.6294,70.19943 -99.8557,70.19943 m 5.8149,-202.42623 H 986.5729 v 388.68871 h 76.5368 V 520.59117 h 66.0481 c 113.7744,0 179.0264,-49.89988 179.0264,-139.50638 0,-59.50237 -29.5941,-130.43257 -170.5745,-130.43257"></path><path d="m 2186.7919,318.16525 h 142.1993 l 0.2736,321.17599 h 76.5431 V 318.16525 h 142.448 v -67.51271 h -361.464 z"></path><rect x="2616.2568" y="250.65253" width="76.536812" height="388.68869"></rect><path d="m 3096.1287,550.30379 c -38.4908,17.88648 -69.7827,27.33969 -109.1846,27.33969 -80.5607,0 -137.877,-56.3399 -137.877,-133.17212 0,-74.99756 57.4843,-132.11486 135.2402,-132.11486 44.3802,0 73.1784,10.29281 109.8934,27.24329 l 21.2604,-66.99964 c -41.8832,-18.67631 -85.4738,-27.75637 -133.2717,-27.75637 -119.524,0 -209.6559,86.2761 -209.6559,200.68484 0,117.53702 86.6461,199.62758 210.7132,199.62758 46.8277,0 92.2808,-10.44207 135.1034,-31.04632 z"></path><path d="m 3270.2171,250.65253 h -76.5431 v 388.68871 h 285.8135 v -67.51272 h -209.2704 z"></path><path d="m 3624.131,571.82821 v -97.37742 h 196.3159 V 406.93807 H 3624.131 v -88.77312 h 222.1939 V 250.65222 H 3547.6005 V 639.34093 H 3849.5 v -67.51272 z"></path><path d="m 1449.4165,490.52126 71.0918,-163.53746 71.1168,163.53746 z M 1559.5464,246.8274 H 1482.03 l -177.7172,392.51353 h 80.2932 l 35.3065,-81.30695 h 201.2166 l 35.3065,81.30695 h 80.2652 z"></path><path d="m 2055.2678,373.6895 c 0,40.0953 -36.9421,66.05431 -103.7458,66.05431 h -74.9634 V 318.16743 h 98.811 c 55.749,0 79.8982,20.4581 79.8982,55.52207 m -30.7509,112.53364 c 71.8755,-20.18447 107.1603,-63.89624 107.1603,-119.92206 0,-52.76075 -27.4859,-115.64949 -158.4284,-115.64949 h -173.2177 v 388.69182 h 76.5275 V 507.25655 h 43.8673 c 35.3065,0 54.3777,9.82013 78.5487,37.07585 l 86.273,95.01101 h 96.97 L 2071.245,519.06372 c -14.6276,-16.82608 -29.874,-26.39436 -46.7281,-32.84058"></path></g><g fill="#FFFFFF"><path d="m 307.69318,250.65225 h 76.58045 V 406.71132 H 691.96059 L 345.98184,60.729477 3.5278e-6,406.71132 H 307.69318 Z"></path><path d="M 384.26743,639.34152 H 307.68698 V 483.28865 H 1.4223329e-5 L 345.97877,829.27052 691.96062,483.28865 H 384.26743 Z"></path></g></svg>
                         </a>
                         <p class="mb-7 text-base text-[#f3f4fe]">
-                            Particle provides an integrated IoT Platform-as-a-Service that helps businesses connect, manage, and deploy software applications to connected devices, from edge to cloud and back.
-                        </p>
+                            A project made by Alexi Houle (houa2909) and Miguel Ouellette (ouem2218) </p>
                         <div class="-mx-3 flex items-center">
                             <a href="javascript:void(0)" class="px-3 text-[#dddddd] hover:text-white">
                                 <svg width="10" height="18" viewBox="0 0 10 18" class="fill-current">
